招生网站申请指导页面显示优化
Signed-off-by: 琚峰 <jufeng@tranzvision.com.cn>

--- a/src/main/resources/html/TZActivityEnrollmentBundle/TZ_ACT_BOOKING_HTML.html
+++ b/src/main/resources/html/TZActivityEnrollmentBundle/TZ_ACT_BOOKING_HTML.html
@@ -3,9 +3,9 @@
 <div class="mian_inner_nav" id="tab1">
 	<div class="float_left">
 		<ul>
-			<li class="li_tab now" onClick="QueryColuHY(1,0)">%bind(:2)</li>
-			<li class="li_tab " onClick="QueryColuHY(1,1)">%bind(:3)</li>
-			<li class="li_tab " onClick="QueryColuHY(1,2)">%bind(:4)</li>
+			<li class="li_tab now" onClick="QueryColuAct(1,0)">%bind(:2)</li>
+			<li class="li_tab " onClick="QueryColuAct(1,1)">%bind(:3)</li>
+			<li class="li_tab " onClick="QueryColuAct(1,2)">%bind(:4)</li>
 		</ul>
 	</div>
 </div>
@@ -19,7 +19,7 @@
 			</ul>
 			<script type="text/javascript">
             $(document).ready(function(){
-				QueryColuHY(1,0);
+            	QueryColuAct(1,0);
             });
         </script>
 		</div>
