--- a/src/main/resources/html/TZApplicationGuideBundle/TZ_APP_GUIDE_HTML.html
+++ b/src/main/resources/html/TZApplicationGuideBundle/TZ_APP_GUIDE_HTML.html
@@ -51,7 +51,9 @@
 
 	<div class="main_mid_left">
 		 <div class="main_tit">%bind(:7)</div>
-              %bind(:4)
+		      <div class="p_body">
+              	%bind(:4)
+              </div>
             </div>
 	   
 </div>
