--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
@@ -34,14 +34,12 @@
 		href="%bind(:32)/statics/css/appeditor/registration-page.css"
 		type="text/css" />
 	<style>
-.input-list-info, .input-list-info-blank { %
-	bind (: 33)
+.input-list-info, .input-list-info-blank { %bind(:33)
 }
 
-.input-list-text { %
-	bind (: 34)
+.input-list-text { %bind(:34)
 }
-
+.form_input p{font-size:12px;text-indent:2em;line-height:26px;}
 .mask {       
 	position: absolute; top: 0px; filter: alpha(opacity=60);   
 	z-index: 1002; left: 0px;     
