--- a/src/main/resources/html/TZInterviewAppointmentBundle/TZ_GD_MS_APPOINT_TABLE_HTML.html
+++ b/src/main/resources/html/TZInterviewAppointmentBundle/TZ_GD_MS_APPOINT_TABLE_HTML.html
@@ -1,4 +1,4 @@
-	<p class="order_sm">%bind(:2)</p>
+	<div class="order_sm">%bind(:2)</div>
 	<table class="table_style" style="margin-top:10px;">
 		%bind(:1)
 	</table>
