--- a/src/main/resources/html/TZInterviewAppointmentBundle/TZ_GD_MS_APPOINT_TH_HTML.html
+++ b/src/main/resources/html/TZInterviewAppointmentBundle/TZ_GD_MS_APPOINT_TH_HTML.html
@@ -1,10 +1,10 @@
 <thead>
 <tr>
-	<td>报到日期</td>
-	<td>报到时间</td>
-	<td>报到地点</td>
+	<td width="12%">报到日期</td>
+	<td width="10%">报到时间</td>
+	<td width="20%">报到地点</td>
 	<td>备注</td>
-	<td>预约状态</br>(已预约／可预约)</td>
-	<td>操作</td>
+	<td width="14%">预约状态</br>(已预约／可预约)</td>
+	<td width="150px">操作</td>
 </tr>
 </thead>
