--- a/src/main/resources/html/TZWebSiteAreaInfoBundle/TZ_SITE_AREA_BKRL_HTML.html
+++ b/src/main/resources/html/TZWebSiteAreaInfoBundle/TZ_SITE_AREA_BKRL_HTML.html
@@ -1,5 +1,5 @@
-<div class="zxj_tit1">%bind(:1)</div>
-<a href="%bind(:4)" class="zxj_more">%bind(:2)</a>
-<div class="zxj_rili ">
+<div class="zxj_tit1" tab-col="%bind(:4)">%bind(:1)</div>
+<a href="javascript:void(0)" class="zxj_more">%bind(:2)</a>
+<div class="zxj_rili " >
 	%bind(:3)
 </div>
