测测上清华相关Bug修改

--- a/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_LOGIN.html
+++ b/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_LOGIN.html
@@ -87,7 +87,7 @@
 								</div>
 							</div>
 							<div class="item" id="qrmm">
-								<img src="%bind(:1)/statics/images/cantsinghua/jjs/icon_check.png" width="24" height="24" />确认密码：&nbsp;
+								<img src="%bind(:1)/statics/images/cantsinghua/jjs/icon_lock.png" width="24" height="24" />确认密码：&nbsp;
 								<div class="input" style="width: 405px;">
 									<input class="itext" name="repassword" type="password" id="repassword" tabindex="3" />
 									<span id="repasswordTip">&nbsp;</span>
@@ -103,7 +103,7 @@
 							</div>
 							<div class="info" style="font-size: 14px;">
 								<p style="text-align: left">注：已注册清华MBA报考服务系统的用户可以直接使用报考服务系统的账号密码进行测试</p>
-								<p style="text-align: left">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;测试版，如有问题请联系电话：010-62781848&nbsp;&nbsp;&nbsp;<a href="%bind(:4)" target="_black"><font style="color:#997423;">忘记密码</font></a></p>
+								<p style="text-align: left">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;测试版，如有问题请联系电话：010-62781848&nbsp;&nbsp;&nbsp;<a style="display:none;" href="%bind(:4)" target="_black"><font style="color:#997423;">忘记密码</font></a></p>
 							</div>
 							<div class="submit">
 								<a onclick="formSubmit();" href="javascript:void(0);">
