--- a/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_MLOGIN.html
+++ b/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_MLOGIN.html
@@ -114,7 +114,7 @@
 								<tr><td colspan="2" id="yzmTip">&nbsp;</td></tr>
 								
 								<tr><td colspan="2">&nbsp;</td></tr>
-								<tr><td colspan="2" style="color: #997423;">注：已注册清华MBA报考服务系统的用户可直接使用报考服务系统的账号密码进行测试。<a href="%bind(:4)"><font style="color:#997423;">忘记密码</font></a></td></tr>
+								<tr><td colspan="2" style="color: #997423;">注：已注册清华MBA报考服务系统的用户可直接使用报考服务系统的账号密码进行测试。<a style="display:none;" href="%bind(:4)"><font style="color:#997423;">忘记密码</font></a></td></tr>
 								<tr><td colspan="2">&nbsp;</td></tr>
 								<tr style="text-align: center;">
 									<td colspan="2">
