--- a/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_INDEX_GRXX_INFO_HTML.html
+++ b/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_INDEX_GRXX_INFO_HTML.html
@@ -6,7 +6,7 @@
 	   	<div class="inner_xinxi">
 	   		<div class="clearfix">
 	   			 <p class="name">%bind(:8)</p>
-	   			 <a href="#" class="change">
+	   			 <a href="%bind(:14)" class="change">
 	   			 	<i></i>
 	   			 	<span>%bind(:1)</span>
 	   			 </a>
@@ -17,13 +17,13 @@
 	   	</div>
 	 </div>
 	 <div class="inner_icon">
-	   	<a href="#">
+	   	<a href="%bind(:15)">
 	   		<div class="news">
 	   			<div class="circle"><span class="circle_span">%bind(:12)</span></div>
 	   		</div>
 	   		<p>%bind(:5)</p>
 	   	</a>
-	   	<a href="#">
+	   	<a href="%bind(:16)">
 	   		<div class="activity">
 	   			<div class="circle"><span class="circle_span">%bind(:13)</span></div>
 	   		</div>
