--- a/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_INDEX_HD_HTML.html
+++ b/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_INDEX_HD_HTML.html
@@ -7,7 +7,7 @@
 	 -->
 	 %bind(:1)
 	 </div>
-	 <a href="#" class="steps_btn">更多</a>
+	 <a href="javascript:void(0);" class="steps_btn" onclick='hdtzMore("%bind(:3)");'>更多</a>
 	 <div class="clear"></div>
 	 <div class="tabNote">
 	 <!-- 
