--- a/src/main/resources/html/TZApplicationCenterBundle/TZ_CLASS_LC_HTML.html
+++ b/src/main/resources/html/TZApplicationCenterBundle/TZ_CLASS_LC_HTML.html
@@ -1,11 +1,17 @@
-<div class="main_tit">%bind(:1)</div>
+<div class="main_tit">%bind(:1)&nbsp;&nbsp;%bind(:9)
+	<div style="float:right;">
+			<a href="%bind(:7)" class="zxj_more1" style="margin-bottom: 10px;">%bind(:2)</a>
+			<a href="%bind(:6)" class="zxj_more1" style="margin-bottom: 10px;">%bind(:3)</a>
+	</div>
+</div>
 
 <div class="zxj_main_body">
 	<div class="main_mid_zxj_interview">
+	<!--  
 		<div class="select_project">  
-			<a href="%bind(:7)" class="zxj_more1" style="margin-bottom: 10px;">%bind(:2)</a>
-			<a href="%bind(:6)" class="zxj_more1" style="margin-bottom: 10px;">%bind(:3)</a>
+			
 		</div>
+		-->
 		<div class="zxj_mba">
 			
 		    <div class="steps step_head">
