--- a/src/main/resources/html/TZApplicationSurveyBundle/TZ_SURVEY_ANS_NEW_HTML.html
+++ b/src/main/resources/html/TZApplicationSurveyBundle/TZ_SURVEY_ANS_NEW_HTML.html
@@ -255,7 +255,7 @@ p {
 	type="text/javascript"></script>
 <!-- <![endif]-->
 <script type="text/javascript" charset="utf-8" src="%bind(:1)/statics/js/onlineSurvey/answer/jquery-1.11.0.min.js"></script>
-<script src="%bind(:1)/statics/js/onlineSurvey/answer/highcharts.js" type="text/javascript"></script>
+<!-- <script src="%bind(:1)/statics/js/onlineSurvey/answer/highcharts.js" type="text/javascript"></script> -->
 <link rel="stylesheet" type="text/css"
 	href="%bind(:1)/statics/js/onlineSurvey/answer/css/easyui.css" />
 <link rel="stylesheet" type="text/css"
