手机版奖学金 + 自动补全

--- a/src/main/resources/html/TZSchlrBundle/TZ_GD_SCHLR_HEAD_MHTML.html
+++ b/src/main/resources/html/TZSchlrBundle/TZ_GD_SCHLR_HEAD_MHTML.html
@@ -1,10 +1,9 @@
-<link href="%bind(:1)/statics/css/website/m/css/style.css" rel="stylesheet" type="text/css">
+<!-- <link href="%bind(:1)/statics/css/website/m/css/style.css" rel="stylesheet" type="text/css"> -->
 <link rel="stylesheet" type="text/css" href="%bind(:1)/statics/js/website/m/jquery-select2/3.4/select2.min.css">
-<script type="text/javascript" src="%bind(:1)/statics/js/website/m/jquery-1.8.3.min.js"></script>
+<!-- <script type="text/javascript" src="%bind(:1)/statics/js/website/m/jquery-1.8.3.min.js"></script> -->
 <script type="text/javascript" src="%bind(:1)/statics/js/website/m/rem.js"></script>
 <script type="text/javascript" src="%bind(:1)/statics/js/website/m/common.js"></script> 
 <script type="text/javascript">
-	var TzUniversityContextPath = "%bind(:1)";
 	var tzDispatcherUrl = "%bind(:2)";
 	var strJgid = "%bind(:3)";
 	var strSiteId = "%bind(:4)";
