--- a/src/main/resources/html/TZEventsMobileBundle/TZ_M_APPLY_REG_FORM_HTML.html
+++ b/src/main/resources/html/TZEventsMobileBundle/TZ_M_APPLY_REG_FORM_HTML.html
@@ -3,7 +3,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta charset="utf-8">
 <meta name="format-detection" content="telephone=no">
-<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0"/>
+<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0;"/>
 <title>在线报名</title>
 <link href="%bind(:1)/statics/css/website/m/css/style.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" href="%bind(:1)/statics/js/website/m/jquery-select2/3.4/select2.min.css">
@@ -35,7 +35,7 @@
 	   <div class="bg1">
 	     <!-- 头部 -->
 	   	 <div class="topbar">
-	   	    在线报名 <a  href="#"><i></i></a>
+	   	    在线报名 <a  href="javascript:returnBack();"><i></i></a>
 	   	 </div>
 	   	 <div class="register">
 		   	 %bind(:2)	
@@ -47,6 +47,11 @@
 	
 	<script type="text/javascript">
 		var applyURL = "%bind(:3)";
+		
+		function returnBack(){
+			location.href = document.referrer;
+			//history.back();
+		}
 		
 		/*用于拼装JSON字符串，然后用parseJSON转为JSON对象*/
 		function cmbcgbyyValueReplace(str){ 
@@ -171,7 +176,7 @@
 					var result = data.result;
 					var resultDesc = data.resultDesc;
 					if(result == "3" || result == "4"){ 
-						//history.back();报名成功
+						history.back();//报名成功
 						alert(resultDesc);
 						generateRegCode();
 						$("#tz_regCode").val("");
