唐敏敏 mba手机招生网站 20170308

--- a/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_APP_STATUS_JS_CSS.html
+++ b/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_APP_STATUS_JS_CSS.html
@@ -1,4 +1,5 @@
 <script type="text/javascript" src="%bind(:1)/statics/js/website/m/rem.js"></script>
 <script type="text/javascript" src="%bind(:1)/statics/js/website/m/common.js"></script> 
+<script type="text/javascript" src="%bind(:1)/statics/js/lib/layer/layer.js"></script>
 <script type="text/javascript" src="%bind(:1)/statics/js/website/m/mIndex.js"></script> 
 
