--- a/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_HD_TZ_LIST_JS_CSS.html
+++ b/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_HD_TZ_LIST_JS_CSS.html
@@ -3,9 +3,10 @@
 
 <link href="%bind(:1)/statics/css/website/m/css/dropload.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="%bind(:1)/statics/js/website/m/dropload/dropload.min.js"></script>  
-<script type="text/javascript" src="%bind(:1)/statics/js/website/m/revokeActivity.js"></script> 
+<script type="text/javascript" src="%bind(:1)/statics/js/website/m/hdTzLoad.js"></script> 
 <script type="text/javascript">
 	$(document).ready(function(){
-		getMyAppActivity("%bind(:2)",1);
+		getNotices("%bind(:2)","%bind(:3)",1);
 	});
 </script> 
+
