--- a/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MWJMM_EP1_ENG_HTML.html
+++ b/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MWJMM_EP1_ENG_HTML.html
@@ -147,7 +147,7 @@ function send_email(_this){
 								<input id="sendemail" type="button"  class="login_btn" onclick="send_email(this)" value="Send Email" />
 								<p class="add_tips">If you have any questions, please contact:</p>
 								<div class="clear"></div>
-								<p class="login_tips" style="float: left;">mbastudents@sem.tsinghua.edu.cn</p>
+								<p class="login_tips" style="float: left;">mbaadmissions@sem.tsinghua.edu.cn</p>
 							</div>							
 						</div>
 					</div>
