--- a/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MWJMM_EP_ENG_HTML.html
+++ b/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MWJMM_EP_ENG_HTML.html
@@ -253,7 +253,7 @@ function send_yzm(_this){
 								<input id="sendemail" type="button"  class="login_btn" onclick="send_email(this)" value="Send Email" />
 								<p class="add_tips">If you have any questions, please contact:</p>
 								<div class="clear"></div>
-								<p class="login_tips" style="float: left;">mbastudents@sem.tsinghua.edu.cn</p>
+								<p class="login_tips" style="float: left;">mbaadmissions@sem.tsinghua.edu.cn</p>
 							</div>
 							<div class="note_f dis_none">
 	                        	<div class="login_account" style="border-radius:0.3rem;">
@@ -269,7 +269,7 @@ function send_yzm(_this){
 	                             <a href="javascript:void(0)" class="login_btn" onclick="ymobile(this)">Next</a>
 	                             <p class="add_tips">If you have any questions, please contact:</p>
 	                             <div class="clear"></div>
-	                             <p class="login_tips" style="float:left;">mbastudents@sem.tsinghua.edu.cn</p> 
+	                             <p class="login_tips" style="float:left;">mbaadmissions@sem.tsinghua.edu.cn</p> 
 	                        </div>
 						</div>
 					</div>
