--- a/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MWJMM_EP_HTML.html
+++ b/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MWJMM_EP_HTML.html
@@ -254,7 +254,7 @@ function send_yzm(_this){
 								<input id="sendemail" type="button"  class="login_btn" onclick="send_email(this)" value="发送邮件到邮箱" />
 								<p class="add_tips">如有问题，请联系：</p>
 								<div class="clear"></div>
-								<p class="login_tips" style="float: left;">mbastudents@sem.tsinghua.edu.cn</p>
+								<p class="login_tips" style="float: left;">mbaadmissions@sem.tsinghua.edu.cn</p>
 							</div>
 							<div class="note_f dis_none">
 	                        	<div class="login_account" style="border-radius:0.3rem;">
@@ -270,7 +270,7 @@ function send_yzm(_this){
 	                             <a href="javascript:void(0)" class="login_btn" onclick="ymobile(this)">下一步</a>
 	                             <p class="add_tips">如有问题，请联系：</p>
 	                             <div class="clear"></div>
-	                             <p class="login_tips" style="float:left;">mbastudents@sem.tsinghua.edu.cn</p> 
+	                             <p class="login_tips" style="float:left;">mbaadmissions@sem.tsinghua.edu.cn</p> 
 	                        </div>
 						</div>
 					</div>
