--- a/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MJHYX_EP_ENG_HTML.html
+++ b/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MJHYX_EP_ENG_HTML.html
@@ -153,7 +153,7 @@ function time(o) {
 								<input type="button"  class="login_btn" onclick="send_email(this)" value="Send Mail" />
 								<p class="add_tips">If you have any questions, please contact:</p>
 								<div class="clear"></div>
-								<p class="login_tips" style="float: left;">mbastudents@sem.tsinghua.edu.cn</p>
+								<p class="login_tips" style="float: left;">mbaadmissions@sem.tsinghua.edu.cn</p>
 							</div>
 						</div>
 					</div>
