--- a/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MWJMM_EP1_HTML.html
+++ b/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MWJMM_EP1_HTML.html
@@ -147,7 +147,7 @@ function send_email(_this){
 								<input id="sendemail" type="button"  class="login_btn" onclick="send_email(this)" value="发送邮件到邮箱" />
 								<p class="add_tips">如有问题，请联系：</p>
 								<div class="clear"></div>
-								<p class="login_tips" style="float: left;">mbastudents@sem.tsinghua.edu.cn</p>
+								<p class="login_tips" style="float: left;">mbaadmissions@sem.tsinghua.edu.cn</p>
 							</div>							
 						</div>
 					</div>
