--- a/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_MREALEAS_HEAD_HTML.html
+++ b/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_MREALEAS_HEAD_HTML.html
@@ -2,7 +2,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta charset="utf-8">
 <meta name="format-detection" content="telephone=no">
-<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0"/>
+<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0;"/>
 <title></title>
 <script type="text/javascript">
 	var TzUniversityContextPath = "%bind(:2)";
