--- a/src/main/webapp/statics/sem/help.html
+++ b/src/main/webapp/statics/sem/help.html
@@ -3,7 +3,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta charset="utf-8">
 <meta name="format-detection" content="telephone=no">
-<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0"/>
+<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0;"/>
 <title>清华MBA招生</title>
 <link href="../css/website/m/css/style.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="../css/website/m/js/jquery-1.8.3.min.js"></script>
