唐敏敏 清华手机版招生mba 20170309

--- a/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_ACTIVITY_JS_CSS.html
+++ b/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_ACTIVITY_JS_CSS.html
@@ -2,6 +2,9 @@
 <script type="text/javascript" src="%bind(:1)/statics/js/website/m/common.js"></script> 
 
 <link href="%bind(:1)/statics/css/website/m/css/dropload.css" rel="stylesheet" type="text/css">
+<link href="%bind(:1)/statics/js/website/m/mobileLayer/need/layer.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="%bind(:1)/statics/js/website/m/mobileLayer/layer.js"></script> 
+
 <script type="text/javascript" src="%bind(:1)/statics/js/website/m/dropload/dropload.min.js"></script>  
 <script type="text/javascript" src="%bind(:1)/statics/js/website/m/revokeActivity.js"></script> 
 <script type="text/javascript">
