手机版账户管理

--- a/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_MOBILE_ZHGL_HTML.html
+++ b/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_MOBILE_ZHGL_HTML.html
@@ -1,7 +1,7 @@
 <div class="bg">
 	<!-- 头部 -->
 	<div class="topbar">
-		账户管理 <a href="#"><i></i></a>
+		账户管理 <a href="%bind(:2)"><i></i></a>
 	</div>
 	<div class="Tab_school">
 		<div class="tit_tab">
