奖学金添加备注列

--- a/src/main/resources/html/TZSchlrBundle/TZ_GD_SCHLR_VIEW_SCHLREDTR_HTML.html
+++ b/src/main/resources/html/TZSchlrBundle/TZ_GD_SCHLR_VIEW_SCHLREDTR_HTML.html
@@ -1,1 +1,1 @@
-<tr><td>%bind(:1)</td><td>%bind(:2)</td><td>%bind(:3)</td><td>%bind(:4)</td><td><a class="zxj_opera" href="%bind(:5)" target="_black">查看</a></td></tr>
+<tr><td>%bind(:1)</td><td>%bind(:2)</td><td>%bind(:3)</td><td>%bind(:4)</td><td>%bind(:5)</td><td><a class="zxj_opera" href="%bind(:6)" target="_black">查看</a></td></tr>
