清华MBA招生修改 20170314 唐敏敏

--- a/src/main/resources/html/TZApplicationCenterBundle/TZ_RQTZS_QRCODE_HTML.html
+++ b/src/main/resources/html/TZApplicationCenterBundle/TZ_RQTZS_QRCODE_HTML.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div id="idcity" class="city_close" onclick="closeThis();">
-		<img src="/university/statics/images/website/skins/23/del.png" width="15" height="15">
+		<img src="%bind(:2)/statics/images/website/skins/23/del.png" width="15" height="15">
 	</div>
 	<img src="%bind(:1)"/>
 </body>
