手机活动修改

--- a/src/main/resources/html/TZEventsMobileBundle/TZ_M_APPLY_REG_FORM_HTML.html
+++ b/src/main/resources/html/TZEventsMobileBundle/TZ_M_APPLY_REG_FORM_HTML.html
@@ -45,13 +45,12 @@
 	   </div>
 	</div>
 	
-	<script type="text/javascript">
+	<script type="text/javascript"> 
 		var applyURL = "%bind(:3)";
 		
 		function returnBack(){
-			location.href = document.referrer;
-			//history.back();
-		}
+			history.back(); 
+		} 
 		
 		/*用于拼装JSON字符串，然后用parseJSON转为JSON对象*/
 		function cmbcgbyyValueReplace(str){ 
