--- a/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MFIELD_HTML3.html
+++ b/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MFIELD_HTML3.html
@@ -1,13 +1,12 @@
 <div class="register_body">
-	<p>%bind(:1)%bind(:2)</p>
+	<p>%bind(:1)%bind(:2)%bind(:7)</p>
 	<div class="overhidden" style="border-bottom: 1px solid #ddd;">
 		<input type="text" id="%bind(:3)" name="%bind(:3)"
 			placeholder="%bind(:4)" />
 	</div>
 	<div class="overhidden">
 		<input type="text" id="%bind(:5)" name="%bind(:5)"
-			placeholder="%bind(:6)" />
-			%bind(:7)
+			placeholder="%bind(:6)" />			
 	</div>	
 </div>
 <p id="%bind(:5)_status" class="reg_tips"></p>
