--- a/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MPASSWORD_HTML.html
+++ b/src/main/resources/html/TZWebSiteMRegisteBundle/TZ_GD_MPASSWORD_HTML.html
@@ -1,8 +1,7 @@
 <div class="register_body">
-	<p>%bind(:1)%bind(:2)</p>
+	<p>%bind(:1)%bind(:2)%bind(:4)</p>
 	<div class="overhidden">
-		<input type="password" name="%bind(:3)" id="%bind(:3)"	placeholder="%bind(:5)" /> 
-		%bind(:4)
+		<input type="password" name="%bind(:3)" id="%bind(:3)"	placeholder="%bind(:5)" /> 		
 	</div>
 </div>
 <p id="%bind(:3)_status" class="reg_tips"></p>
