清华招生外网Bug修改

--- a/src/main/resources/html/TZSchlrBundle/TZ_GD_SCHLR_VIEW_APPLY_THEAD_HTML.html
+++ b/src/main/resources/html/TZSchlrBundle/TZ_GD_SCHLR_VIEW_APPLY_THEAD_HTML.html
@@ -1,1 +1,1 @@
-<tr><td>奖学金名称</td><td>开始时间</td><td>结束时间</td><td>申请结果</td><td>备注</td><td>操作</td></tr>
+<tr><td width="260px">奖学金名称</td><td width="140px">开始时间</td><td width="140px">结束时间</td><td width="80px">申请结果</td><td>备注</td><td width="80px">操作</td></tr>
