--- a/src/main/resources/html/TZSchlrBundle/TZ_GD_SCHLR_VIEW_MAIN_MHTML.html
+++ b/src/main/resources/html/TZSchlrBundle/TZ_GD_SCHLR_VIEW_MAIN_MHTML.html
@@ -1,6 +1,6 @@
 <div class="bg">
 	<!-- 头部 -->
-	<div class="topbar">可申请奖学金<a href="#"><i></i></a></div>
+	<div class="topbar">可申请奖学金<a href="javascript:history.back(-1);"><i></i></a></div>
 	<div class="Tab_school">
 		<div class="tit_tab">
 			<li class="school_on">可申请奖学金<img class="school_t" src="%bind(:1)/statics/css/website/m/images/on.png"></li>
