清华招生网站手机版系统站内信修改
Signed-off-by: 琚峰 <jufeng@tranzvision.com.cn>

--- a/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_MY_SYSINFO_DIV.html
+++ b/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_MY_SYSINFO_DIV.html
@@ -1,9 +1,8 @@
 <div id="%bind(:1)" class="actions">
 	<p class="ac_time">%bind(:2)</p>
 	<div class="message_body">
-		<p>%bind(:3)</p>
-		<p id="%bind(:4)">%bind(:5)</p>
-		<p>%bind(:6)</p>
+		<p id="%bind(:3)">%bind(:4)</p>
+		%bind(:5)
 		<a href="#" class="slide"><span>展开</span><i class="slide_down"></i></a>
 	</div>
 </div>
