--- a/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_TB_HTML.html
+++ b/src/main/resources/html/TZCanInTsinghuaBundle/TZ_CAN_TSINGHUA_TB_HTML.html
@@ -1,7 +1,7 @@
 <div  style="width: 98%; border: 1px solid #E0E0E0; padding: 5px; margin-bottom: 10px">
-	<h3 style="text-align:left">%bind(:1)<font color=blue>%bind(:3)</font></h3>
+	<h3 style="text-align:left">%bind(:1)</h3>
 	
-	<h5 style="text-align:left">历史问卷统计情况</h5>
+	<h5 style="text-align:left">上一年%bind(:3)分布图：</h5>
 	<div style="width:100%;height:420px;">
 		<div id="hischartdiv_%bind(:4)" style="width:48%;float:left;"></div>
 		<div id="hisserialdiv_%bind(:4)" style="width:48%;float:left;"></div>
