清华mba招生网站报名中心修改 20170323 唐敏敏

--- a/src/main/resources/html/TZApplicationCenterBundle/TZ_APPCENTER_LC_SETP1.html
+++ b/src/main/resources/html/TZApplicationCenterBundle/TZ_APPCENTER_LC_SETP1.html
@@ -1,4 +1,4 @@
-<div class="step_li %bind(:1) " style="margin-left: 5%;">%bind(:2)<p class="steps_name">%bind(:3)</p></div>
+<div class="step_li %bind(:1) " style="margin-left: 5%;">%bind(:2)<p class="steps_name">%bind(:3)</p><i class="triangle"></i><i class="triangle_span"></i></div>
 
 
                
