--- a/src/main/resources/html/TZApplicationCenterBundle/TZ_CLASS_LC_HTML.html
+++ b/src/main/resources/html/TZApplicationCenterBundle/TZ_CLASS_LC_HTML.html
@@ -28,6 +28,13 @@
 	var $content = $(".zxj_mba .step_Note").children();
 	$content.hide();
 	$content.eq(showLcNum).show();
+	
+	var $shade1 = $(".step_li .triangle");
+    var $shade2 = $(".step_li .triangle_span");
+    $shade1.hide();
+    $shade2.hide();
+    $shade1.eq(showLcNum/2).show();
+    $shade2.eq(showLcNum/2).show();
 </script>
 
                
