--- a/src/main/resources/html/TZSchlrBundle/TZ_GD_SCHLR_VIEW_APPLY_THEAD_HTML.html
+++ b/src/main/resources/html/TZSchlrBundle/TZ_GD_SCHLR_VIEW_APPLY_THEAD_HTML.html
@@ -1,1 +1,1 @@
-<tr><td width="260px">奖学金名称</td><td width="140px">开始时间</td><td width="140px">结束时间</td><td width="80px">申请结果</td><td>备注</td><td width="80px">操作</td></tr>
+<tr><td style="width:30%">奖学金名称</td><tdstyle="width:15%">开始时间</td><td style="width:15%">结束时间</td><td style="width:10%">申请结果</td><td style="width:20%">备注</td><td style="width:10%">操作</td></tr>
